<!--
 Copyright (c) 2026
 
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at
 
    http://www.apache.org/licenses/LICENSE-2.0
 
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dialog_padding">

            <LinearLayout style="@style/FormRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/price_namespace" />

                <Spinner
                    android:id="@+id/namespace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:minHeight="40dp" />

            </LinearLayout>

            <LinearLayout style="@style/FormRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/price_security" />

                <Spinner
                    android:id="@+id/security"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:minHeight="40dp" />

            </LinearLayout>

            <LinearLayout style="@style/FormRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/price_currency" />

                <Spinner
                    android:id="@+id/currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:minHeight="40dp" />

            </LinearLayout>

            <LinearLayout style="@style/FormRow">

                <ImageView
                    style="@style/FormIcon"
                    android:src="@drawable/ic_day" />

                <TextView
                    android:id="@+id/input_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:hint="@string/price_date"
                    android:padding="4dp" />

                <TextView
                    android:id="@+id/input_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:padding="4dp" />
            </LinearLayout>

            <LinearLayout style="@style/FormRow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_account_type" />

                <Spinner
                    android:id="@+id/type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:minHeight="40dp" />
            </LinearLayout>

            <LinearLayout style="@style/FormRow">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <org.gnucash.android.ui.util.widget.CalculatorEditText
                        android:id="@+id/input_exchange_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/price_price" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/fetch_exchange_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/btn_fetch_quote" />
            </LinearLayout>

            <TextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/design_default_color_error"
                tools:text="@string/price_error_price" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/calculator_keyboard"
        layout="@layout/kbd_calculator"
        android:visibility="gone" />
</FrameLayout>